.build-output/apps.tanzu.vmware.com.ContainerApp/spring-metal/kubernetes-carvel-package/httproute.yml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: placeholder
  annotations: {}
spec:
  parentRefs:
  - group: networking.tanzu.vmware.com
    kind: Entrypoint
    name: main
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: placeholder
      port: 80
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /
